# checkoff_multilang

checkoff_c/: Dockerfile  Dockerfile.glibc  Dockerfile.glibc_small  Dockerfile.glibc_stages  Dockerfile.microhttpd  Dockerfile.scratch  README.md  main.c  main_mhd.c
checkoff_c/certs/: ZscalerRootCertificate-2048-SHA256.pem_bak
checkoff_go/: Dockerfile  Dockerfile.upx  go.mod
checkoff_go/gorm_test/: main.go
checkoff_go/src/: main.go
checkoff_python/: .dockerignore  .gitignore  Dockerfile  Dockerfile.alpine  Dockerfile.base  Dockerfile.custom-python  Dockerfile.python-bookworm-slim-disable-dtags  Dockerfile.standalone  README.md  docker-cmd.sh  exec-standalone.sh  gunicorn.conf.py  main.py  requirements.txt  server.py  standalone.py
checkoff_python/checkoff_python/: __init__.py  config.py  init_single_threaded.py
checkoff_python/checkoff_python/models/: __init__.py  base.py  todo_item.py
checkoff_python/checkoff_python/routes/: __init__.py  todo_item.py  util.py
checkoff_rust/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.musl  Dockerfile.musl-upx  README.md
checkoff_rust/src/: main.rs
checkoff_vue/: README.md  package-lock.json  package.json
checkoff_vue/src/: App.vue
checkoff_vue/src/components/: HelloWorld.vue
