[package]
name = "checkoff_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["tokio", "http1"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["full"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "mysql"] }
tower-http = { version = "0.6.2", features = ["cors"] }
mimalloc = { version = "0.1.43", features = ["secure"] }
